# event-management-system

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 631d2e7af87c_first_migration.py
app/: database.py  dependencies.py  main.py  middlewares.py  settings.py  tasks.py  utils.py
app/models/: __init__.py  models.py
app/routers/: auth.py  events.py  jwt.py
app/schemas/: event.py  schemas.py
